slide13/style.css
body {
	margin: 0px;
	overflow: hidden;
}

.fill {
    position: absolute;
    top: 0;
    left: 0;

    width: 100%;
    height: 100%;
}

#navBar {
	float: right;
	width: 210px;
    height: 100%;
    padding-left: 25px;
    background-color: #405275;
    position: relative;
    z-index: 1000;
    opacity: 0.93;
}

form, select, div {
    color: #e3f2ff;
    text-shadow: 0 0 2px #336cec;
}

select {
	background-color: #218ffe;
	width: 70%;
	margin-bottom: 10px;
	font-family: overwatch;
}

#soldierAbilities {
	display: none;
}

#navBarCloseButton {
	color: white;
	position: fixed;
	top: 50%;
    padding-top: 20px;
    padding-bottom: 20px;
    padding-right: 5px;
    padding-left: 5px;
    background-color: #218ffe;
    right: 217px;
}

#navBarCloseButton:hover, #navBarShowButton:hover, #allStatsButton:hover, #mapSelect:hover, #heroSelect:hover {
	background-color: #4da5fe;
}

#navBarShowButton {
	display: none;
	color: white;
	position: fixed;
	top: 50%;
    padding-top: 20px;
    padding-bottom: 20px;
    padding-right: 8px;
    padding-left: 5px;
    background-color: #218ffe;
    right: 0px;
}

svg {
	position: absolute;
    z-index: 1;
}

#ilinoisImage {
	display: none;
}

#allStatsButton {
	background-color: #218ffe;
	width: 122px;
    padding: 15px 25px 15px 25px;
    margin-top: 35px;
}

.heatmap-container {
    width: 1280px;
    height: 720px;
}

.heatmap-canvas {
    width: 100%;
    height: 100%;
}

.tooltip {
    text-shadow: 0px 0px 16px black;
    font-size: 24px;
}

